# gslapt

./: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  gslapt-kde.desktop  gslapt-kde.desktop.in  gslapt.Slackbuild  gslapt.desktop  gslapt.desktop.in  gslapt.glade  gslapt.gladep  meson.build  mkpolkitwrapper.sh  org.jaos.gslapt.policy  org.jaos.gslapt.policy.in  series_map.rc  series_map.rc.in  seriesmerge.sh  slack-desc  slack-required
.tx/: config
po/: LINGUAS  Makevars  POTFILES.in  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  eo.po  es.po  es_AR.po  es_ES.po  fr.po  gl_ES.po  gslapt.pot  he.po  hi_IN.po  hu.po  id.po  it.po  ja.po  ltg.po  lv_LV.po  meson.build  nl.po  no.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  vi.po  (+1 more)
src/: Makefile.am  Makefile.jaos  callbacks.c  callbacks.h  interface.c  interface.h  main.c  meson.build  series.c  series.h  settings.c  settings.h  support.h
ui/: Makefile.am  about.ui  changelog_window.ui  dep_error_dialog.ui  dl_progress_window.ui  gslapt.ui  icon_legend.ui  meson.build  notification.ui  pkgtools_progress_window.ui  repositories_changed.ui  source_failed_dialog.ui  source_window.ui  transaction_window.ui  window_preferences.ui
