gslapt_ui_FILES = \
  about.ui \
  changelog_window.ui \
  dep_error_dialog.ui \
  dl_progress_window.ui \
  gslapt.ui \
  icon_legend.ui \
  notification.ui \
  pkgtools_progress_window.ui \
  repositories_changed.ui \
  source_failed_dialog.ui \
  source_window.ui \
  transaction_window.ui \
  window_preferences.ui

EXTRA_DIST = $(gslapt_ui_FILES)

# gslapt_uidir = $(pkgdatadir)/ui
# gslapt_ui_DATA = $(gslapt_ui_FILES)
