gslapt_ui_FILES = \
  about.ui \
  changelog_window.ui \
  dep_error_dialog.ui \
  dl_progress_window.ui \
  gslapt.ui \
  icon_legend.ui \
  notification.ui \
  pkgtools_progress_window.ui \
  repositories_changed.ui \
  source_failed_dialog.ui \
  source_window.ui \
  transaction_window.ui \
  window_preferences.ui

gslapt_image_FILES = \
  gslapt.png \
  pkg_action_available_excluded.png \
  pkg_action_available.png \
  pkg_action_downgrade.png \
  pkg_action_installed_excluded.png \
  pkg_action_installed.png \
  pkg_action_install.png \
  pkg_action_reinstall.png \
  pkg_action_remove.png \
  pkg_action_upgrade.png

EXTRA_DIST = $(gslapt_ui_FILES) $(gslapt_image_FILES)

gslapt_uidir = $(pkgdatadir)/ui
gslapt_ui_DATA = $(gslapt_ui_FILES) $(gslapt_image_FILES)
